# cemetery_management

./: .gitignore  pyproject.toml
cemetery_management/: hooks.py  install.py  modules.txt  tasks.py
cemetery_management/api/: findagrave.py  membership_directory.py  plot_builder.py
cemetery_management/cemetery_management/doctype/aftercare_schedule/: aftercare_schedule.json  aftercare_schedule.py
cemetery_management/cemetery_management/doctype/burial_photo/: burial_photo.json  burial_photo.py
cemetery_management/cemetery_management/doctype/burial_plot/: burial_plot.json  burial_plot.py
cemetery_management/cemetery_management/doctype/burial_record/: burial_record.json  burial_record.py
cemetery_management/cemetery_management/doctype/cemetery/: cemetery.json  cemetery.py
cemetery_management/cemetery_management/doctype/cemetery_fee_type/: cemetery_fee_type.json  cemetery_fee_type.py
cemetery_management/cemetery_management/doctype/cemetery_price_list/: cemetery_price_list.json  cemetery_price_list.py
cemetery_management/cemetery_management/doctype/cemetery_price_list_item/: cemetery_price_list_item.json  cemetery_price_list_item.py
cemetery_management/config/: desktop.py
cemetery_management/overrides/: church_member.py
cemetery_management/public/css/: cemetery.css
cemetery_management/public/js/: cemetery.js
cemetery_management/www/: cemetery_map.html  cemetery_map.py  cemetery_search.html  cemetery_search.py  cemetery_veterans.html  cemetery_veterans.py  memorial.html  memorial.py
(+89 files in other folders)
